remove powermock from our unit tests, fixes #3960